# XVM

./: .clang-format  CMakeLists.txt  README.md
include/XVM/: Allocator.h  Common.h
include/XVM/CoreLib/: BaseLib.h  Shared.h
include/XVM/Interpreter/: Allocator.h  Api.h  ApiImpl.h  CSize.h  Callstack.h  Container.h  Instruction.h  Opcode.h  State.h  TArray.h  TClosure.h  TDict.h  TString.h  TValue.h
scripts/: format.py  utils.py
src/: Allocator.cpp  Api.cpp  ApiExecute.cpp  ApiImpl.cpp  BaseLib.cpp  Callstack.cpp  Container.cpp  State.cpp  TArray.cpp  TClosure.cpp  TDict.cpp  TString.cpp  TValue.cpp  xvm_allocator.cpp  xvm_allocator.h  xvm_api.cpp  xvm_api.h  xvm_api_impl.cpp  xvm_api_impl.h  xvm_array.cpp  xvm_array.h  xvm_callinfo.h  xvm_closure.cpp  xvm_closure.h  xvm_common.h  xvm_container.cpp  xvm_container.h  xvm_csize.h  xvm_dict.cpp  xvm_dict.h  xvm_execute.cpp  xvm_instruction.h  xvm_lib_base.cpp  xvm_lib_base.h  xvm_lib_shared.h  xvm_opcode.h  xvm_state.cpp  xvm_state.h  xvm_string.cpp  xvm_string.h  (+2 more)
